audio vis / destroy / draw, reusable API

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -365,7 +365,8 @@ nav {
   position: fixed;
   top: 0;
   bottom: 0;
-  right: 0; }
+  right: 0;
+  display: none; }
 
 .vis-audio .bars {
   list-style-type: none;
