--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
 // =============================================================================
 
 @import "modules/nav";
+@import "modules/preloader";
 @import "modules/vis-tracks";
 @import "modules/vis-audio";
 @import "modules/vis-followers";
