tracksvis & followers vis styled on vertical heights

--- a/src/scss/modules/nav.scss
+++ b/src/scss/modules/nav.scss
@@ -14,7 +14,7 @@ nav {
     bottom: 0;
     left: -33.333%;
     width: 33.333%;
-    background: rgba(0, 0, 0, 0.8);
+    background: #333;
     z-index: 20;
     transition: box-shadow 0.4s;
 
