--- a/src/views/followers.html
+++ b/src/views/followers.html
@@ -14,5 +14,5 @@
 		<button data-key="population">population</button>
 		<button data-key="none">reset map</button>
 	</form>
-	<p class="foot"><small><sup>*</sup>data projected from a sample of 8000 Soundcloud followers, of a total of 79,800</small></p>
+	<p class="foot"><small><sup>*</sup>estimated totals calculated from a sample of 8000 Soundcloud followers</small></p>
 </div>
