--- a/src/css/main.css
+++ b/src/css/main.css
@@ -127,7 +127,7 @@ nav {
   bottom: 0;
   left: -33.333%;
   width: 33.333%;
-  background: rgba(0, 0, 0, 0.8);
+  background: #333;
   z-index: 20;
   transition: box-shadow 0.4s; }
   nav h1 {
@@ -231,7 +231,7 @@ nav {
   opacity: 1; }
 
 .vis-tracks h1, .vis-tracks h2, .vis-tracks h3, .vis-tracks h4, .vis-tracks h5, .vis-tracks h6 {
-  font-size: 6.525vw;
+  font-size: 6.525vh;
   line-height: 1em;
   margin: 0;
   color: #fff;
@@ -244,10 +244,10 @@ nav {
 
 .vis-tracks .subtitle {
   font-weight: 300;
-  font-size: 4.3065vw; }
+  font-size: 4.3065vh; }
 
 .vis-tracks .subtitle-bold {
-  font-size: 6.525vw;
+  font-size: 6.525vh;
   font-weight: 700; }
 
 .vis-tracks .axis line,
@@ -294,17 +294,16 @@ nav {
 
 .vis-tracks .frame {
   background: #fff;
-  padding: 2.5% 5%;
-  max-width: 836px;
   margin: 0 auto; }
 
 .vis-tracks .html-content {
   position: absolute;
-  max-width: 720px;
-  width: 90%;
-  padding-bottom: 90%;
-  height: 0;
-  z-index: 0; }
+  width: 90vh;
+  height: 90vh;
+  z-index: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate3D(-50%, -50%, 0); }
 
 .vis-tracks .html-content:after {
   display: block;
@@ -319,13 +318,15 @@ nav {
   background-color: #c6d300; }
 
 .vis-tracks .svg-container {
-  max-width: 720px;
   position: absolute;
-  width: 90%;
-  padding-bottom: 90%;
+  width: 90vh;
+  height: 90vh;
   vertical-align: middle;
   overflow: hidden;
-  z-index: 10; }
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate3D(-50%, -50%, 0); }
 
 .vis-tracks .svg-content {
   display: inline-block;
@@ -333,17 +334,14 @@ nav {
   top: 0;
   left: 0; }
 
-.vis-tracks .intro {
-  margin-top: 102.5%;
-  padding-left: 1em; }
-
 .vis-tracks .description {
   max-width: 36em;
   margin-top: 3em; }
 
 .vis-tracks .key {
   font-size: 0.703125rem;
-  text-align: right; }
+  text-align: right;
+  padding: 2vh; }
 
 .vis-tracks .key dt, .vis-tracks .key dd, .vis-tracks .key ul, .vis-tracks .key li {
   display: inline-block;
@@ -386,19 +384,6 @@ nav {
   width: 8px;
   height: 8px;
   border-radius: 4px; }
-
-@media (min-width: 815px) {
-  .vis-tracks .intro {
-    margin-top: 730px; }
-  .vis-tracks .svg-container,
-  .vis-tracks .html-content {
-    padding-bottom: 720px; }
-  .vis-tracks h1, .vis-tracks h2, .vis-tracks h3, .vis-tracks h4, .vis-tracks h5, .vis-tracks h6 {
-    font-size: 3.33rem; }
-  .vis-tracks .subtitle {
-    font-size: 2.1978rem; }
-  .vis-tracks .subtitle-bold {
-    font-size: 3.33rem; } }
 
 .vis-audio h1, .vis-audio h2, .vis-audio h3, .vis-audio h4, .vis-audio h5 {
   margin: 0;
@@ -622,6 +607,8 @@ nav {
   .vis-followers .svg-container {
     text-align: center;
     position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 0; }
   .vis-followers form {
     pointer-events: all; }
