--- a/src/css/main.css
+++ b/src/css/main.css
@@ -125,8 +125,9 @@ nav {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -33.333%;
+  left: -240px;
   width: 33.333%;
+  min-width: 240px;
   background: #333;
   z-index: 20;
   transition: box-shadow 0.4s; }
@@ -192,7 +193,6 @@ nav {
     margin: 1em 0;
     max-width: 38em; }
     nav p a {
-      display: inline-block;
       border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
       text-decoration: none; }
   nav small {
@@ -205,6 +205,10 @@ nav {
     padding: 0 2vh 2.5vh; }
   nav .foot {
     margin-bottom: 0; }
+
+@media (min-width: 794px) {
+  nav {
+    left: -33.333%; } }
 
 .nav-visible {
   box-shadow: 5px 0 15px 0 rgba(0, 0, 0, 0.25); }
@@ -301,7 +305,7 @@ nav {
   z-index: 0;
   transition: fill 0.3s; }
 
-.vis-tracks .dot.active:hover circle, .preload-tracks .dot.active:hover circle {
+.vis-tracks .dot.active.hover circle, .preload-tracks .dot.active.hover circle {
   fill: #ff5500; }
 
 .vis-tracks .dot image, .preload-tracks .dot image {
@@ -310,7 +314,7 @@ nav {
   z-index: 10;
   transition: opacity 0.3s; }
 
-.vis-tracks .dot.active:hover image, .preload-tracks .dot.active:hover image {
+.vis-tracks .dot.active.hover image, .preload-tracks .dot.active.hover image {
   opacity: 1; }
 
 .vis-tracks .chart, .preload-tracks .chart {
@@ -445,7 +449,8 @@ nav {
   position: absolute;
   padding: 1vh 2vh 1vh 11.75vh;
   bottom: 0;
-  z-index: 20; }
+  z-index: 20;
+  max-width: 50%; }
 
 .vis-audio .info button {
   border: none;
