--- a/src/scss/modules/nav.scss
+++ b/src/scss/modules/nav.scss
@@ -12,8 +12,9 @@ nav {
     position: absolute;
     top: 0;
     bottom: 0;
-    left: -33.333%;
+    left: -240px;
     width: 33.333%;
+    min-width: 240px;
     background: #333;
     z-index: 20;
     transition: box-shadow 0.4s;
@@ -92,7 +93,6 @@ nav {
 		margin: 1em 0;
 		max-width: 38em;
 		a {
-			display: inline-block;
 			border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
 			text-decoration: none;
 		}
@@ -112,6 +112,12 @@ nav {
 
 	.foot {
 		margin-bottom: 0;
+	}
+}
+
+@media (min-width:794px) {
+	nav {
+		left: -33.333%;
 	}
 }
 
