--- a/src/css/main.css
+++ b/src/css/main.css
@@ -104,11 +104,13 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; }
+  overflow: hidden;
+  background: #333; }
 
 [role="main"] {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background: #fff; }
 
 .vis {
   position: absolute;
@@ -202,11 +204,12 @@ nav {
   nav .info {
     position: absolute;
     bottom: 0;
-    padding: 0 2vh 2.5vh; }
+    padding: 0 2vh 2.5vh;
+    width: 100%; }
   nav .foot {
     margin-bottom: 0; }
 
-@media (min-width: 794px) {
+@media (min-width: 720px) {
   nav {
     left: -33.333%; } }
 
