--- a/src/scss/layout/containers.scss
+++ b/src/scss/layout/containers.scss
@@ -9,9 +9,11 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	background: #333;
 }
 
 [role="main"] {
 	width: 100%;
 	height: 100%;
+	background: #fff;
 }
