--- a/src/scss/modules/vis-audio.scss
+++ b/src/scss/modules/vis-audio.scss
@@ -32,7 +32,7 @@
 		border-radius: 3.25vh;
 		background-color: #ff5500;
 		background-image: url('/img/sc-arrow.svg');
-		background-size: 100% auto;
+		background-size: 100% 100%;
 		position: absolute;
 		left: 2.6vh;
 		top: 1.6vh;
@@ -102,7 +102,7 @@
 	.bars {
 		padding: 0;
 		margin: 0;
-		position: fixed;
+		position: absolute;
 		top: 0;
 		bottom: 0;
 		right: 0;
