--- a/src/css/main.css
+++ b/src/css/main.css
@@ -497,6 +497,7 @@ nav {
 
 .vis-audio progress {
   -webkit-appearance: none;
+  -moz-appearance: none;
   border: none;
   position: absolute;
   top: -2px;
@@ -504,7 +505,8 @@ nav {
   right: 0;
   padding: 0;
   height: 2px;
-  width: 100%; }
+  width: 100%;
+  background: none; }
 
 .vis-audio progress::-webkit-progress-bar {
   height: 2px;
@@ -513,6 +515,9 @@ nav {
 .vis-audio progress::-webkit-progress-value {
   background: #fff;
   height: 2px; }
+
+.vis-audio progress::-moz-progress-bar {
+  background: #fff; }
 
 .vis-audio svg {
   margin-left: 50%;
