--- a/src/scss/modules/vis-audio.scss
+++ b/src/scss/modules/vis-audio.scss
@@ -73,6 +73,7 @@
 
 	progress {
 		-webkit-appearance: none;
+		-moz-appearance: none;
 		border: none;
 		position: absolute;
 		top: -2px;
@@ -81,6 +82,7 @@
 		padding: 0;
 		height: 2px;
 		width: 100%;
+		background: none;
 	}
 
 	progress::-webkit-progress-bar {
@@ -91,6 +93,10 @@
 	progress::-webkit-progress-value {
 		background: #fff;
 		height: 2px;
+	}
+
+	progress::-moz-progress-bar {
+		background: #fff;
 	}
 
 	svg {
