--- a/src/views/audio.html
+++ b/src/views/audio.html
@@ -4,7 +4,7 @@
 	<h3>tempo: { track.tempo }bpm</h3>
 	<h4>time signature: { track.timeSig }</h4>
 	<h5>key: <span>{ track.key }</span> <span>{ track.mode }</span></h5>
-	<progress value="0" max="100"></progress>
+	<div class="progress"></div>
 	<button></button>
 </div>
 
