--- a/src/scss/modules/vis-audio.scss
+++ b/src/scss/modules/vis-audio.scss
@@ -31,7 +31,7 @@
 		height: 6.5vh;
 		border-radius: 3.25vh;
 		background-color: #ff5500;
-		background-image: url('/img/sc-arrow.svg');
+		background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Cpath%20fill%3D%22%23FFF%22%20d%3D%22M73.75%2050l-35-28.5%208.5%2028.5-8.5%2028%22/%3E%3C/svg%3E);
 		background-size: 100% 100%;
 		position: absolute;
 		left: 2.6vh;
