IE map width bug. dual preload issue

--- a/src/scss/modules/vis-tracks.scss
+++ b/src/scss/modules/vis-tracks.scss
@@ -194,6 +194,10 @@
 		display: none;
 	}
 	h3 {
+		content: ".";
+		animation-name: none;
+	}
+	h3.animate {
 		&:after {
 			overflow: hidden;
 			display: inline-block;
