--- a/src/css/main.css
+++ b/src/css/main.css
@@ -420,7 +420,11 @@ nav {
 .js-loaded .preload-tracks {
   display: none; }
 
-.preload-tracks h3:after {
+.preload-tracks h3 {
+  content: ".";
+  animation-name: none; }
+
+.preload-tracks h3.animate:after {
   overflow: hidden;
   display: inline-block;
   vertical-align: bottom;
@@ -650,13 +654,22 @@ nav {
     z-index: 10;
     pointer-events: none; }
   .vis-followers .svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 50%;
+    vertical-align: middle;
+    overflow: hidden;
     text-align: center;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     z-index: 0; }
   .vis-followers svg {
-    width: 100%; }
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0; }
   .vis-followers form {
     pointer-events: all; }
   .vis-followers path.country {
