--- a/src/scss/modules/vis-followers.scss
+++ b/src/scss/modules/vis-followers.scss
@@ -58,6 +58,15 @@
 	}
 
 	.svg-container {
+
+		display: inline-block;
+		position: relative;
+		width: 100%;
+		padding-bottom: 50%;
+		vertical-align: middle;
+		overflow: hidden;
+
+
 		text-align: center;
 		position: relative;
 		top: 50%;
@@ -66,7 +75,10 @@
 	}
 
 	svg {
-		width: 100%;
+		display: inline-block;
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
 
 	form {
